style: add specific styling for warn button icons to ensure visibility

--- a/src/app/score-tracker/score-tracker.component.scss
+++ b/src/app/score-tracker/score-tracker.component.scss
@@ -91,6 +91,17 @@ i.fa-pen::before {
   }
 }
 
+// Additional specific styling for warn button icons
+.game-controls button[color="warn"] mat-icon,
+.mat-mdc-raised-button.mat-warn mat-icon {
+  color: white !important;
+}
+
+// Force Material Design icons to be white on warn buttons using ng-deep
+::ng-deep .mat-mdc-raised-button.mat-warn .mat-icon {
+  color: white !important;
+}
+
 .scoreboard {
   display: flex;
   flex-direction: column;
